[gd_scene load_steps=2 format=3 uid="uid://o5hldb6xxsfh"]

[ext_resource type="Script" uid="uid://1af5vgapgp7o" path="res://EndScreen.gd" id="1_ekb8w"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ekb8w")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1919.0
offset_bottom = 1077.0
color = Color(0.508224, 0.405037, 0.353666, 0.392157)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 809.0
offset_top = 220.0
offset_right = 849.0
offset_bottom = 260.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "GAME OVER"

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Puntuaje Final: X"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Reiniciar"

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Volver al menu"

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
